--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AthleticsGymApp">
-        <activity android:name=".CenovnikActivity"></activity>
+        <activity android:name=".KalkulatorKalorijaActivity"></activity>
+        <activity android:name=".JedanTreningActivity" />
+        <activity android:name=".CenovnikActivity" />
         <activity android:name=".TreninziActivity" />
         <activity android:name=".OpcijeActivity" />
         <activity android:name=".PrijavaActivity" />
